# bstroh

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  cdk.json  index.html  pyproject.toml  sites.yaml
.github/workflows/: deploy-infra.yml  diff-infra.yml  fix-content-type.yml  test.yml
admin_app/: ai_generator.py  app.py  builder_config.py  generator.py  requirements.txt
admin_app/builder_templates/components/: _form_field_macros.html  contact-form.html  content-block.html  countdown-widget.html  footer-simple.html  gallery-grid.html  hero-image.html  hero-text.html  interactive-map.html  nav-main.html  sidebar-about.html  sidebar-contact.html  text-columns.html  text-heading.html  text-paragraph.html  two-column.html
admin_app/builder_templates/templates/default/: page.html
admin_app/builder_templates/templates/landing-page/: page.html
admin_app/builder_templates/templates/personal-blog/: page.html
admin_app/data/: color_schemes.json  components.json  form_fields.json  templates.json
admin_app/static/js/: builder.js
admin_app/templates/: base.html  change_password.html  files.html  login.html
admin_app/templates/builder/: ai_assistant.html  dashboard.html  help.html  page_editor.html  setup.html
docs/: BUILDER_PLAN.md
infrastructure/: __init__.py  app.py  config.py
infrastructure/cdk_constructs/: __init__.py  admin_server.py  certificate.py  deployment_user.py  distribution.py  dns.py  initial_content.py  invalidation.py  nameserver_sync.py  static_site.py  storage.py
infrastructure/lambda/form_submission/: index.py
infrastructure/stacks/: __init__.py  admin_stack.py  gpu_server_stack.py  site_stack.py
infrastructure/templates/: christmas.css  error.html  index.html  instructions.html
scripts/: fix_content_type.sh  output_credentials.py  package_admin_app.py  pw.py  run_admin_local.sh  set_site_password.py  start_devstral.sh
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  test_admin_app.py  test_ai_generator.py  test_config.py  test_contact_form.py  test_generator.py  test_static_site.py
